fix featured campaign alignment and add join btn, change date format in cards in index and home

--- a/app/assets/stylesheets/campaigns/_index.scss
+++ b/app/assets/stylesheets/campaigns/_index.scss
@@ -1,5 +1,6 @@
 #featured_campaign {
   display: flex;
+  align-items: center;
   padding: 120px 0;
   width: 80vw;
   margin: auto;
